# examen_P2

./: .env.example  .gitignore  API_EXAMPLES.md  FRONTEND_API_SPEC.md  cookiejar  main.py  pyproject.toml
frontend/: index.html  script.js  styles.css
src/: database.py  dependencies.py  models.py
src/routers/: auth.py  users.py
